--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#009788</color>
-    <color name="colorPrimaryDark">#009788</color>
-    <color name="colorAccent">#009788</color>
+    <color name="colorPrimary">#0e97f5</color>
+    <color name="colorPrimaryDark">#0e97f5</color>
+    <color name="colorAccent">#0e97f5</color>
+    <color name="colorLogoBg">#FFFFFF</color>
 </resources>
